# python-tech-example

./: README.md  pyproject.toml  tox.ini
poetry_demo/: calc.py
tests/: test_calc.py
